--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "directories": {
     "doc": "docs",
-    "test": "tests"
+    "test": "tests",
+    "src": "src",
+    "dist": "dist"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha tests/*.js",
     "build":"tsc"
   },
   "repository": {
